--- a/style.css
+++ b/style.css
@@ -64,6 +64,29 @@
   font-size: 18px;
 }
 
+.table-filter__input-cont {
+  position: relative;
+}
+
+.table-filter__submit {
+  position: absolute;
+  right: 0px;
+  top: 0px;
+  bottom: 0px;
+  margin: 0;
+  padding: 0 8px;
+  background: #0d6efd;
+  border: none;
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+  box-shadow: -5px 0 10px rgba(0, 0, 0, 0.1)
+}
+
+.table-search__img {
+  height: 20px;
+  width: 20px;
+}
+
 
 /* ---- Tabel --- */
 .tabel-wrapper {
