--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 .container {
   max-width: 1920px;
-  padding: 12px 70px;
+  padding: 30px 70px;
   justify-content: space-between;
 }
 
@@ -77,8 +77,8 @@
   padding: 0 8px;
   background: #0d6efd;
   border: none;
-  border-top-right-radius: 5px;
-  border-bottom-right-radius: 5px;
+  border-top-right-radius: .25rem;
+  border-bottom-right-radius: .25rem;
   box-shadow: -5px 0 10px rgba(0, 0, 0, 0.1)
 }
 
